# sentspace

./: README.md  Sentence.html  index.html  pyproject.toml  setup.py
.circleci/: config.yml
embedding/: index.html
lexical/: index.html  utils.html
sentspace/: Sentence.py  __init__.py
sentspace/utils/: download_norms.sh  misc.py  s3.py
syntax/: features.html  index.html
syntax/utils/: index.html
utils/: index.html  misc.html  resources.html  s3.html
