[project]
name = "sentspace"
version = "0.0.2"
description = ""
authors = [
    { name = "Greta Tuckute", email = "gretatu@mit.edu" },
    { name = "Aalok Sathe", email = "asathe@mit.edu" },
]

requires-python = ">=3.10,<3.11"
dependencies = [
    "nltk==3.6.2",
    "pandas>=1.3.5,<2.0.0",
    "PyYAML>=6.0",
    # "transformers==4.11.3",
    "scipy>=1.7.3,<2.0.0",
    "boto3>=1.20.25,<2.0.0",
    # "torch==1.9.0",
    "seaborn==0.11.2",
    "numpy>=1.22.1,<2.0.0",
    "dash>=2.0.0,<3.0.0",
    "plotly>=5.5.0,<6.0.0",
    "dash-bootstrap-components>=1.0.3,<2.0.0",
]

[project.optional-dependencies]
polyglot = [
    "polyglot>=16.7.4,<17.0.0",
    # "PyICU>=2.8,<3.0.0",
    "pycld2>=0.41,<1.0.0",
    "Morfessor>=2.0.6,<3.0.0",
    "icu>=0.0.1",
    "pyicu>=2.15.2",
]
dev = [
    "pdoc3>=0.10.0,<1.0.0",
    "ipython>=8.4.0,<9.0.0"
]

[project.scripts]
sentspace = "sentspace.__main__:main"
# sentspace-web = "sentspace.web.__main__:main"

[project.urls]
issues = "https://github.com/sentspace/sentspace/issues"
homepage = "https://github.com/aalok-sathe/sentspace"
documentation = "https://aalok-sathe.github.io/sentspace"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
